# 2022-school-made-in-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  fract.cpp  sandbox.cpp
src/: CMakeLists.txt  decl.hpp
src/decl/context/: context.hpp  context_of.hpp  context_traits.hpp
src/decl/make/: make.hpp  make_and_store.hpp
src/decl/storage/: bound_storage.hpp  bound_storage_bindings.hpp  bound_storage_get.hpp  bound_storage_traits.hpp  bound_storage_traits_of.hpp  storage.hpp  storage_traits.hpp
src/decl/tag/: undefined.hpp
src/decl/type/: debug.hpp  same.hpp  std_tuple.hpp  type.hpp  type_of.hpp  what.hpp
src/decl/type_list/: at.hpp  contains.hpp  debug.hpp  empty.hpp  head.hpp  index.hpp  size.hpp  std_tuple.hpp  tail.hpp  type_list.hpp  union.hpp
src/mad/make/: all.hpp
src/mad/make/command/: all.hpp  command.hpp  prerequisite.hpp  recipe.hpp
src/mad/make/context/: context.hpp
src/mad/make/control_flow_graph/: all.hpp  control_flow_graph.hpp  control_flow_node.hpp  targets.hpp
src/mad/make/make/: make.hpp  make_target.hpp  make_targets.hpp
src/mad/make/prerequisite/: all.hpp  prerequisites.hpp  targets_with_prerequisite.hpp
src/mad/make/storage/: storage.hpp
src/mad/make/unevaluated_context/: all.hpp  prerequisite.hpp  recipe_return_type.hpp  (+2 more)
src/mad/meta/: all.hpp
test/: CMakeLists.txt
test/mad/make/: family_tree.hpp
test/mad/make/control_flow_graph/: control_flow_graph.test.cpp
test/mad/make/prerequisite/: prerequisites.test.cpp  targets_with_prerequisite.test.cpp
test/mad/make/unevaluated_context/: prerequisite.test.cpp
(+32 files in other folders)
